# AP

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  compile.sh
11/: CMakeLists.txt  README.md  main.c  АП_лаб11.docx
12/: CMakeLists.txt  README.md  main.cpp  АП_лаб12.docx
13/: CMakeLists.txt  README.md  main.c  АП_лаб13.docx
14/: CMakeLists.txt  README.md  main.cpp  АП_лаб14.docx
15/: CMakeLists.txt  LinkedList.h  README.md  data.txt  laba_15.cpp  main.cpp  result.txt  АП_лаб15.docx
16/: CMakeLists.txt  README.md  main.cpp  АП_лаб16.docx
17/: CMakeCache.txt  CMakeLists.txt  README.md  main.cpp  АП_лаб17.docx
KP2/: CMakeLists.txt  main.cpp  var16_1.cpp  var16_2.cpp  var16_3.cpp
Kursach/: ArrayMethods.cpp  ArrayMethods.h  CMakeLists.txt  README.md  SortData.cpp  SortData.h  SortTesting.cpp  SortTesting.h  SortingAlgorithms.cpp  SortingAlgorithms.h  diagram.json  main.cpp  test.txt  ДА-12-19_Записка.docx
